[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/ui/main_menu_shutter.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/pixelmix.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/ui/menuOption.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/bg/dream/dream_layer0.png" type="Texture" id=4]
[ext_resource path="res://assets/bg/dream/dream_layer1.png" type="Texture" id=5]
[ext_resource path="res://assets/bg/dream/dream_layer2.png" type="Texture" id=6]
[ext_resource path="res://scenes/ui/mainMenu.gd" type="Script" id=7]
[ext_resource path="res://assets/bg/dream/dream_ground.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/main_menu_window.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/main_menu/main_menu_shutter_poster.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/main_menu/twitter.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/main_menu/fb.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/main_menu/ig.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/main_menu/cancel.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/main_menu/cancel_hover.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/main_menu/fb_hover.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/main_menu/ig_hover.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/main_menu/twitter_hover.png" type="Texture" id=18]
[ext_resource path="res://assets/ui/main_menu/volume.png" type="Texture" id=19]
[ext_resource path="res://assets/music/sfx/shutter_operating.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/ui/main_menu/fullscreen_false.png" type="Texture" id=21]
[ext_resource path="res://assets/ui/main_menu/fullscreen_true.png" type="Texture" id=22]
[ext_resource path="res://assets/ui/main_menu/slider.png" type="Texture" id=23]
[ext_resource path="res://assets/ui/main_menu/slider_grabber.png" type="Texture" id=24]
[ext_resource path="res://assets/ui/main_menu/slider_grabber_hover.png" type="Texture" id=25]
[ext_resource path="res://scenes/ui/fade_screen.tscn" type="PackedScene" id=26]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 23 )
region_rect = Rect2( 0, 0, 41, 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.184314, 0.247059, 0.258824, 1 )

[sub_resource type="Animation" id=7]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("shutter:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shutterSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("shutter:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.9, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shutterSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shopWindow" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="sky" type="ParallaxBackground" parent="."]

[node name="bg" type="ParallaxLayer" parent="sky"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 840, 0 )

[node name="Sprite" type="Sprite" parent="sky/bg"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="fg1" type="ParallaxLayer" parent="sky"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 840, 0 )

[node name="clouds1" type="Sprite" parent="sky/fg1"]
position = Vector2( 0, 20 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false

[node name="fg2" type="ParallaxLayer" parent="sky"]
motion_scale = Vector2( 0.7, 1 )
motion_mirroring = Vector2( 840, 0 )

[node name="clouds2" type="Sprite" parent="sky/fg2"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 0, 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
centered = false

[node name="fg3" type="ParallaxLayer" parent="sky"]

[node name="ground" type="Sprite" parent="sky/fg3"]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
centered = false

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 180.0
margin_top = 100.0
margin_right = 241.0
margin_bottom = 174.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="VBox"]
margin_right = 61.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.870588, 0.921569, 0.827451, 1 )
text = "NIGHT SHIFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newGame" parent="VBox" instance=ExtResource( 3 )]
margin_top = 16.0
margin_bottom = 26.0
option_text = "New game"

[node name="continue" parent="VBox" instance=ExtResource( 3 )]
margin_top = 30.0
margin_bottom = 40.0
option_text = "Continue"

[node name="options" parent="VBox" instance=ExtResource( 3 )]
margin_top = 44.0
margin_bottom = 54.0
option_text = "Options"

[node name="about" parent="VBox" instance=ExtResource( 3 )]
margin_top = 58.0
margin_bottom = 68.0
option_text = "About"

[node name="quit" parent="VBox" instance=ExtResource( 3 )]
margin_top = 72.0
margin_bottom = 82.0
option_text = "Quit"

[node name="shutter" type="Sprite" parent="."]
position = Vector2( 210, 126 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 7
frame = 6

[node name="shutterPoster" type="Sprite" parent="."]
visible = false
position = Vector2( 130, 52 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
centered = false

[node name="about" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -60.0
margin_right = 60.0
margin_bottom = 40.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about" type="Label" parent="about"]
margin_right = 120.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.141176, 0.192157, 0.2, 1 )
text = "ABOUT

A game by
Yi Chen Hock."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="about"]
margin_top = 49.0
margin_right = 120.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 14 )
custom_constants/separation = 10
alignment = 1

[node name="ig" type="TextureButton" parent="about/HBox"]
margin_left = 27.0
margin_right = 41.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 17 )
expand = true

[node name="twitter" type="TextureButton" parent="about/HBox"]
margin_left = 51.0
margin_right = 69.0
margin_bottom = 14.0
rect_min_size = Vector2( 18, 14 )
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 18 )
expand = true

[node name="fb" type="TextureButton" parent="about/HBox"]
margin_left = 79.0
margin_right = 93.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 16 )
expand = true

[node name="tools" type="Label" parent="about"]
margin_top = 71.0
margin_right = 120.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.141176, 0.192157, 0.2, 1 )
text = "Tools: 
Godot, PS CS6"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -60.0
margin_right = 60.0
margin_bottom = 40.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Label" parent="options"]
margin_right = 120.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.141176, 0.192157, 0.2, 1 )
text = "OPTIONS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volControl" type="HBoxContainer" parent="options"]
margin_top = 16.0
margin_right = 120.0
margin_bottom = 32.0
alignment = 1

[node name="volIcon" type="TextureRect" parent="options/volControl"]
margin_left = 7.0
margin_right = 27.0
margin_bottom = 16.0
rect_min_size = Vector2( 20, 16 )
texture = ExtResource( 19 )
expand = true

[node name="volSlider" type="HSlider" parent="options/volControl"]
margin_left = 31.0
margin_right = 113.0
margin_bottom = 16.0
rect_min_size = Vector2( 82, 16 )
custom_icons/grabber_highlight = ExtResource( 25 )
custom_icons/grabber = ExtResource( 24 )
custom_styles/slider = SubResource( 5 )
custom_styles/grabber_area = SubResource( 6 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="options"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 12 )
alignment = 1

[node name="fullscreen" type="Label" parent="options/HBoxContainer"]
margin_left = 20.0
margin_top = 2.0
margin_right = 83.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.141176, 0.192157, 0.2, 1 )
text = "Fullscreen: "
valign = 1

[node name="fullscreenButton" type="TextureButton" parent="options/HBoxContainer"]
margin_left = 87.0
margin_right = 99.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
expand = true

[node name="off" type="TextureRect" parent="options/HBoxContainer/fullscreenButton"]
margin_right = 10.0
margin_bottom = 10.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="on" type="TextureRect" parent="options/HBoxContainer/fullscreenButton"]
visible = false
margin_right = 10.0
margin_bottom = 10.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullscreenTip" type="Label" parent="options"]
margin_top = 60.0
margin_right = 120.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.141176, 0.192157, 0.2, 1 )
text = "Press F4 to
toggle fullscreen"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="TextureButton" parent="."]
visible = false
margin_left = 260.0
margin_top = 162.0
margin_right = 267.0
margin_bottom = 168.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shutterAnimation" type="AnimationPlayer" parent="."]
anims/shutterClose = SubResource( 7 )
anims/shutterOpen = SubResource( 4 )

[node name="shutterSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="ColorRect" parent="." instance=ExtResource( 26 )]
fade_in_time = 0.0
fade_out_time = 4.0
[connection signal="pressed" from="VBox/newGame" to="." method="_on_newGame_pressed"]
[connection signal="pressed" from="VBox/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBox/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBox/about" to="." method="_on_about_pressed"]
[connection signal="pressed" from="VBox/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="about/HBox/ig" to="." method="_on_ig_pressed"]
[connection signal="pressed" from="about/HBox/twitter" to="." method="_on_twitter_pressed"]
[connection signal="pressed" from="about/HBox/fb" to="." method="_on_fb_pressed"]
[connection signal="value_changed" from="options/volControl/volSlider" to="." method="_on_volSlider_value_changed"]
[connection signal="pressed" from="options/HBoxContainer/fullscreenButton" to="." method="_on_fullscreenButton_pressed"]
[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
